chandeliers-lus/tests/compile_fail/ui/tc/poly/equality.stderr
error: Binary operator `=` expects arguments of a concrete type, found type variable T
 --> tests/compile_fail/ui/tc/poly/equality.rs:5:14
  |
5 |     let b = (t = u); tel;
  |              ^^^^^
  |
note: The left-hand-side is found to be of type T
 --> tests/compile_fail/ui/tc/poly/equality.rs:5:14
  |
5 |     let b = (t = u); tel;
  |              ^
note: The right-hand-side is found to be of type T
 --> tests/compile_fail/ui/tc/poly/equality.rs:5:18
  |
5 |     let b = (t = u); tel;
  |                  ^

error: Binary operator `+` expects arguments of a concrete type, found type variable T
  --> tests/compile_fail/ui/tc/poly/equality.rs:11:15
   |
11 |     let out = t + u; tel;
   |               ^^^^^
   |
note: The left-hand-side is found to be of type T
  --> tests/compile_fail/ui/tc/poly/equality.rs:11:15
   |
11 |     let out = t + u; tel;
   |               ^
note: The right-hand-side is found to be of type T
  --> tests/compile_fail/ui/tc/poly/equality.rs:11:19
   |
11 |     let out = t + u; tel;
   |                   ^
